--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
         <meta name="description" content="Sulfur - Responsive HTML5 Template">
         <meta name="author" content="Shahriyar Ahmed">
 
+        <link rel="stylesheet" href="{% static 'w3.css' %}" type="text/css">
         <!-- Bootstrap CSS  -->
         <link rel="stylesheet" href="{% static 'asset/bootstrap/css/bootstrap.min.css' %}" type="text/css">
 
@@ -62,9 +63,9 @@
                                 <div class="col-md-6">
                                     <!-- Start Contact Info -->
                                     <ul class="contact-details">
-                                        <li><a href="#"><i class="fa fa-phone"></i> +12 345 678 000</a>
+                                        <li><a href="#"><i class="fa fa-phone"></i> +91 741735703 +91 8938979011</a>
                                         </li>
-                                        <li><a href="#"><i class="fa fa-envelope-o"></i> support@sulfur.com</a>
+                                        <li><a href="#"><i class="fa fa-envelope-o"></i> shreshtharnd20@gmail.com</a>
                                         </li> 
                                     </ul>
                                     <!-- End Contact Info -->
@@ -122,7 +123,7 @@
                             <i class="fa fa-bars"></i>
                         </button>
                         <!-- End Toggle Nav Link For Mobiles -->
-                        <a class="navbar-brand" href="index.html">Sulfur</a>
+                        <a href="/index/"><img src="{% static 'asset\images\logo.png' %}" style="width:100px;margin-top:15px;margin-left:20px;"></a>
                     </div>
                     <div class="navbar-collapse collapse">
                         
@@ -165,8 +166,8 @@
             <div class="overlay">
                 <div class="container">
                     <div class="intro-text">
-                        <h1>Welcome To The <span>Great Sulfur</span></h1>
-                        <p>Generate a flood of new business with the <br> power of a digital media platform</p>
+                        <h1>Welcome To The <span>SRD</span></h1>
+                        <p>we are to develop tools which helps you better</p>
                         <a href="#feature" class="page-scroll btn btn-primary">Read More</a>
                     </div>
                 </div>
