--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -123,33 +123,34 @@
                             <i class="fa fa-bars"></i>
                         </button>
                         <!-- End Toggle Nav Link For Mobiles -->
-                        <a class="navbar-brand" href="index.html">Sulfur</a>
+                        <a href="/index/"><img src="{% static 'asset\images\logo.png' %}" style="width:100px;margin-top:15px;margin-left:20px;"></a>
+
                     </div>
                     <div class="navbar-collapse collapse">
                         
                         <!-- Start Navigation List -->
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="index.html">Home</a>
+                                <a href="/index/">Home</a>
                             </li>
                             <li>
-                                <a class="active" href="about.html">About Us</a>
+                                <a class="active" href="/aboutus/">About Us</a>
                             </li>
                             <li>
-                                <a href="service.html">Service</a>
+                                <a href="/service/">Service</a>
                             </li>
                             <li>
-                                <a href="portfolio.html">Portfolio</a>
+                                <a href="/portfolio/">Portfolio</a>
                             </li>
                             <li>
-                                <a href="blog.html">Blog</a>
+                                <a href="/blog/">Blog</a>
                                 <ul class="dropdown">
                                     <li>
-                                        <a href="blog-item.html">Item Page</a>
+                                        <a href="/blog-item/">Item Page</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a>
+                            <li><a href="/contact/">Contact</a>
                             </li>
                         </ul>
                         <!-- End Navigation List -->
