--- a/app/templates/blog-item.html
+++ b/app/templates/blog-item.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><html lang="en" class="no-js"> <![endif]-->
 <html lang="en">
@@ -19,30 +20,30 @@
         <meta name="author" content="Shahriyar Ahmed">
 
         <!-- Bootstrap CSS  -->
-        <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="{% static 'asset/bootstrap/css/bootstrap.min.css' %}" type="text/css">
 
         <!-- Font Awesome CSS -->
-        <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="{% static 'asset/font-awesome/css/font-awesome.min.css' %}" type="text/css">
 
         <!-- Owl Carousel CSS -->
-        <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
-        <link rel="stylesheet" href="asset/css/owl.theme.css" type="text/css">
-        <link rel="stylesheet" href="asset/css/owl.transitions.css" type="text/css">
+        <link rel="stylesheet" href="{% static 'asset/css/owl.carousel.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'asset/css/owl.theme.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'asset/css/owl.transitions.css' %}" type="text/css">
         
         <!-- Css3 Transitions Styles  -->
-        <link rel="stylesheet" type="text/css" href="asset/css/animate.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'asset/css/animate.css' %}">
         
         <!-- Lightbox CSS -->
-        <link rel="stylesheet" type="text/css" href="asset/css/lightbox.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'asset/css/lightbox.css' %}">
 
         <!-- Sulfur CSS Styles  -->
-        <link rel="stylesheet" type="text/css" href="asset/css/style.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'asset/css/style.css' %}">
 
         <!-- Responsive CSS Style -->
-        <link rel="stylesheet" type="text/css" href="asset/css/responsive.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'asset/css/responsive.css' %}">
 
 
-        <script src="asset/js/modernizrr.js"></script>
+        <script src="{% static 'asset/js/modernizrr.js' %}"></script>
 
         
 
@@ -123,33 +124,34 @@
                             <i class="fa fa-bars"></i>
                         </button>
                         <!-- End Toggle Nav Link For Mobiles -->
-                        <a class="navbar-brand" href="index.html">Sulfur</a>
+                        <a href="/index/"><img src="{% static 'asset\images\logo.png' %}" style="width:100px;margin-top:15px;margin-left:20px;"></a>
+
                     </div>
                     <div class="navbar-collapse collapse">
                         
                         <!-- Start Navigation List -->
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="index.html">Home</a>
+                                <a href="/index/">Home</a>
                             </li>
                             <li>
-                                <a href="about.html">About Us</a>
+                                <a href="/aboutus/">About Us</a>
                             </li>
                             <li>
-                                <a href="service.html">Service</a>
+                                <a href="/service/">Service</a>
                             </li>
                             <li>
-                                <a href="portfolio.html">Portfolio</a>
+                                <a href="/portfolio/">Portfolio</a>
                             </li>
                             <li>
-                                <a class="active" href="blog.html">Blog</a>
+                                <a class="active" href="/blog/">Blog</a>
                                 <ul class="dropdown">
                                     <li>
-                                        <a class="active" href="blog-item.html">Item Page</a>
+                                        <a class="active" href="/blog-item/">Item Page</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a>
+                            <li><a href="/contact/">Contact</a>
                             </li>
                         </ul>
                         <!-- End Navigation List -->
@@ -189,7 +191,7 @@
                     <!-- Start Blog post -->
                     <div class="single-blog-post">
                         <div class="post-img">
-                            <img src="asset/images/blog/blog-02.jpg" class="img-responsive" alt="Blog image">
+                            <img src="{% static 'asset/images/blog/blog-02.jpg' %}" class="img-responsive" alt="Blog image">
                         </div>
                         <h1 class="post-title"><a href="#">Nulla facilisi integer lacinia sollicitudin massa</a></h1>
                         
@@ -237,7 +239,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object" src="asset/images/user.png" alt="...">
+                                    <img class="media-object" src="{% static 'asset/images/user.png' %}" alt="...">
                                 </a>
                             </div>
                             <div class="media-body">
@@ -254,7 +256,7 @@
                         <ol class="comments-list">
                             <li>
                                 <div class="comment-box clearfix">
-                                    <div class="avatar"><img alt="" src="asset/images/user-2.png"></div>
+                                    <div class="avatar"><img alt="" src="{% static 'asset/images/user-2.png' %}"></div>
                                     <div class="comment-content">
                                         <div class="comment-meta">
                                             <span class="comment-by">fghfghjfghj</span>
@@ -284,7 +286,7 @@
   
                             <li>
                                 <div class="comment-box clearfix">
-                                    <div class="avatar"><img alt="" src="asset/images/user-2.png"></div>
+                                    <div class="avatar"><img alt="" src="{% static 'asset/images/user-2.png' %}"></div>
                                     <div class="comment-content">
                                         <div class="comment-meta">
                                             <span class="comment-by">sa</span>
@@ -368,43 +370,43 @@
                         
                         <ul class="flickr-list">
                             <li>
-                                <a href="asset/images/flickr/8.jpg" data-lightbox="picture-1">
-                                    <img src="asset/images/flickr/8.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/8.jpg' %}" data-lightbox="picture-1">
+                                    <img src="{% static 'asset/images/flickr/8.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/7.jpg" data-lightbox="picture-2">
-                                    <img src="asset/images/flickr/7.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/7.jpg' %}" data-lightbox="picture-2">
+                                    <img src="{% static 'asset/images/flickr/7.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/6.jpg" data-lightbox="picture-3">
-                                    <img src="asset/images/flickr/6.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/6.jpg' %}" data-lightbox="picture-3">
+                                    <img src="{% static 'asset/images/flickr/6.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/5.jpg" data-lightbox="picture-4">
-                                    <img src="asset/images/flickr/5.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/5.jpg' %}" data-lightbox="picture-4">
+                                    <img src="{% static 'asset/images/flickr/5.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/4.jpg" data-lightbox="picture-5">
-                                    <img src="asset/images/flickr/4.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/4.jpg' %}" data-lightbox="picture-5">
+                                    <img src="{% static 'asset/images/flickr/4.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/3.jpg" data-lightbox="picture-6">
-                                    <img src="asset/images/flickr/3.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/3.jpg' %}" data-lightbox="picture-6">
+                                    <img src="{% static 'asset/images/flickr/3.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/2.jpg" data-lightbox="picture-7">
-                                    <img src="asset/images/flickr/2.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/2.jpg' %}" data-lightbox="picture-7">
+                                    <img src="{% static 'asset/images/flickr/2.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                             <li>
-                                <a href="asset/images/flickr/1.jpg" data-lightbox="picture-8">
-                                    <img src="asset/images/flickr/1.jpg" alt="" class="img-responsive">
+                                <a href="{% static 'asset/images/flickr/1.jpg' %}" data-lightbox="picture-8">
+                                    <img src="{% static 'asset/images/flickr/1.jpg' %}" alt="" class="img-responsive">
                                 </a>
                             </li>
                         </ul>
@@ -424,7 +426,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object" src="asset/images/recent-post/post-02.jpg" alt="...">
+                                    <img class="media-object" src="{% static 'asset/images/recent-post/post-02.jpg' %}" alt="...">
                                 </a>
                             </div>
                             <div class="media-body">
@@ -439,7 +441,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object" src="asset/images/recent-post/post-03.jpg" alt="...">
+                                    <img class="media-object" src="{% static 'asset/images/recent-post/post-03.jpg' %}" alt="...">
                                 </a>
                             </div>
                             <div class="media-body">
@@ -454,7 +456,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object" src="asset/images/recent-post/post-04.jpg" alt="...">
+                                    <img class="media-object" src="{% static 'asset/images/recent-post/post-04.jpg' %}" alt="...">
                                 </a>
                             </div>
                             <div class="media-body">
@@ -608,43 +610,43 @@
                         <div class="flickr-widget">
                             <ul class="flickr-list">
                                 <li>
-                                    <a href="asset/images/portfolio/img1.jpg" data-lightbox="picture-1">
-                                        <img src="asset/images/portfolio/img1.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img1.jpg' %}" data-lightbox="picture-1">
+                                        <img src="{% static 'asset/images/portfolio/img1.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img2.jpg" data-lightbox="picture-2">
-                                        <img src="asset/images/portfolio/img2.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img2.jpg' %}" data-lightbox="picture-2">
+                                        <img src="{% static 'asset/images/portfolio/img2.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img3.jpg" data-lightbox="picture-3">
-                                        <img src="asset/images/portfolio/img3.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img3.jpg' %}" data-lightbox="picture-3">
+                                        <img src="{% static 'asset/images/portfolio/img3.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img4.jpg" data-lightbox="picture-4">
-                                        <img src="asset/images/portfolio/img4.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img4.jpg' %}" data-lightbox="picture-4">
+                                        <img src="{% static 'asset/images/portfolio/img4.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img5.jpg" data-lightbox="picture-5">
-                                        <img src="asset/images/portfolio/img5.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img5.jpg' %}" data-lightbox="picture-5">
+                                        <img src="{% static 'asset/images/portfolio/img5.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img6.jpg" data-lightbox="picture-6">
-                                        <img src="asset/images/portfolio/img6.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img6.jpg' %}" data-lightbox="picture-6">
+                                        <img src="{% static 'asset/images/portfolio/img6.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img1.jpg" data-lightbox="picture-7">
-                                        <img src="asset/images/portfolio/img1.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img1.jpg' %}" data-lightbox="picture-7">
+                                        <img src="{% static 'asset/images/portfolio/img1.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="asset/images/portfolio/img2.jpg" data-lightbox="picture-8">
-                                        <img src="asset/images/portfolio/img2.jpg" alt="" class="img-responsive">
+                                    <a href="{% static 'asset/images/portfolio/img2.jpg' %}" data-lightbox="picture-8">
+                                        <img src="{% static 'asset/images/portfolio/img2.jpg' %}" alt="" class="img-responsive">
                                     </a>
                                 </li>
                             </ul>
@@ -683,20 +685,20 @@
         
         
         <!-- Sulfur JS File -->
-        <script src="asset/js/jquery-2.1.3.min.js"></script>
-        <script src="asset/js/jquery-migrate-1.2.1.min.js"></script>
-        <script src="asset/bootstrap/js/bootstrap.min.js"></script>
-        <script src="asset/js/owl.carousel.min.js"></script>
-        <script src="asset/js/jquery.appear.js"></script>
-        <script src="asset/js/jquery.fitvids.js"></script>
-        <script src="asset/js/jquery.nicescroll.min.js"></script>
-        <script src="asset/js/lightbox.min.js"></script>
-        <script src="asset/js/count-to.js"></script>
-        <script src="asset/js/styleswitcher.js"></script>
+        <script src="{% static 'asset/js/jquery-2.1.3.min.js' %}"></script>
+        <script src="{% static 'asset/js/jquery-migrate-1.2.1.min.js' %}"></script>
+        <script src="{% static 'asset/bootstrap/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'asset/js/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'asset/js/jquery.appear.js' %}"></script>
+        <script src="{% static 'asset/js/jquery.fitvids.js' %}"></script>
+        <script src="{% static 'asset/js/jquery.nicescroll.min.js' %}"></script>
+        <script src="{% static 'asset/js/lightbox.min.js' %}"></script>
+        <script src="{% static 'asset/js/count-to.js' %}"></script>
+        <script src="{% static 'asset/js/styleswitcher.js' %}"></script>
         
-        <script src="asset/js/map.js"></script>
+        <script src="{% static 'asset/js/map.js' %}"></script>
         <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-        <script src="asset/js/script.js"></script>
+        <script src="{% static 'asset/js/script.js' %}"></script>
         
     
     </body>
