--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,26 +130,26 @@
                         <!-- Start Navigation List -->
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a class="active" href="index.html">Home</a>
+                                <a class="active" href="/index/">Home</a>
                             </li>
                             <li>
-                                <a href="about.html">About Us</a>
+                                <a href="/aboutus/">About Us</a>
                             </li>
                             <li>
-                                <a href="service.html">Service</a>
+                                <a href="/service/">Service</a>
                             </li>
                             <li>
-                                <a href="portfolio.html">Portfolio</a>
+                                <a href="/portfolio/">Portfolio</a>
                             </li>
                             <li>
-                                <a href="blog.html">Blog</a>
+                                <a href="/blog/">Blog</a>
                                 <ul class="dropdown">
                                     <li>
-                                        <a href="blog-item.html">Item Page</a>
+                                        <a href="/blog-item/">Item Page</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a>
+                            <li><a href="/contact/">Contact</a>
                             </li>
                         </ul>
                         <!-- End Navigation List -->
