--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -189,38 +189,16 @@
             <div class="row">
                <div class="col-md-5">
                    <div class="about-img">
-                       <img src="{% static 'asset/images/corporate1.jpg' %}" class="img-responsive" alt="About images">
-                       <div class="head-text">
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus vitae ligula elementum ut luctus lorem facilisis.</p>
-                           <span>CEO, Themebean</span>
-                       </div>
+                    <center>
+                       <img style="width:350px;" src="{% static 'asset/images/1logo.png' %}" class="img-responsive" alt="About images">
+                   </center>
                    </div>
                </div>
                <div class="col-md-7">
                    <div class="about-text">
-                       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
-                       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                       <p style="font-size:25px;margin-top:60px;">At SRD, we have IT Cops who loves to take challenges. Our cops have all the IT skills in them weather it is related to software or hardware. Our team has brilliant skilled engineers who can deal with any type of project. Our main aim is to improve the humanity. At SRD we are contineously working on some projects which can help to improve the life of humans and take us to the next level of science.</p>
                    </div>
                    
-                   <div class="about-list">
-                       <h4>Some important Feature</h4>
-                       <ul>
-                           <li><i class="fa fa-check-square"></i>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</li>
-                           <li><i class="fa fa-check-square"></i>Lorem ipsum dolor sit amet, consectetur adipiscing adipiscing.</li>
-                           <li><i class="fa fa-check-square"></i>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan.</li>
-                           <li><i class="fa fa-check-square"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                           <li><i class="fa fa-check-square"></i>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</li>
-                           <li><i class="fa fa-check-square"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                       </ul>
-                       
-                       <h4>More Feature</h4>
-                       <ul>
-                           <li><i class="fa fa-check-square"></i>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</li>
-                           <li><i class="fa fa-check-square"></i>Lorem ipsum dolor sit amet, consectetur adipiscing adipiscing.</li>
-                           <li><i class="fa fa-check-square"></i>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan.</li>
-                           <li><i class="fa fa-check-square"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                       </ul>
-                   </div>
                    
                </div>
                 
@@ -236,7 +214,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 wow zoomIn" data-wow-duration="2s" data-wow-delay="300ms">
-                    <p>Awesome Aires Template is ready for <br> Business, Agency, Landing or Creative Portfolio<br>Aires is Responsive and help you to grow your business</p>
+                    <p>Awesome Aires Template is ready for<br>Business, Agency, Landing or Creative Portfolio<br>Aires is Responsive and help you to grow your business</p>
                 </div>
             </div>
         </div>
@@ -245,7 +223,7 @@
         
         
         
-        
+
         <!-- Start Team Member Section -->
     <section id="team-section">
         <div class="container">
@@ -257,13 +235,15 @@
                     </div>                        
                 </div>
             </div>
-            <div class="row">
+            
+
+            <div class="row" style="width:80%:padding-left:50px;padding-right:50px;">
                 <div class="col-md-3 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="300ms">
                     <div class="team-member">
                         <img src="{% static 'asset/images/team/team-1.jpg' %}" class="img-responsive" alt="">
                         <div class="team-details">
-                            <h4>John Doe</h4>
-                            <p>Founder & Director</p>
+                            <h4>Aryan Kulshreshtha</h4>
+                            <p>Founder &amp; Director</p>
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -278,8 +258,8 @@
                     <div class="team-member">
                         <img src="{% static 'asset/images/team/team-2.jpg' %}" class="img-responsive" alt="">
                         <div class="team-details">
-                            <h4>John Doe</h4>
-                            <p>Founder & Director</p>
+                            <h4>Sonali Kulshreshtha</h4>
+                            <p>Founder &amp; Director</p>
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -289,40 +269,9 @@
                             </ul>
                         </div>
                     </div>
-                </div><!-- /.col-md-3 -->
-                <div class="col-md-3 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="900ms">
-                    <div class="team-member">
-                        <img src="{% static 'asset/images/team/team-3.jpg' %}" class="img-responsive" alt="">
-                        <div class="team-details">
-                            <h4>John Doe</h4>
-                            <p>Founder & Director</p>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- /.col-md-3 -->
-                <div class="col-md-3 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1200ms">
-                    <div class="team-member">
-                        <img src="{% static 'asset/images/team/team-4.jpg' %}" class="img-responsive" alt="">
-                        <div class="team-details">
-                            <h4>John Doe</h4>
-                            <p>Founder & Director</p>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div><!-- /.col-md-3 -->
+                </div>
             </div>
+
         </div>
     </section>
     <!-- End Team Member Section -->
