--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -7,7 +7,7 @@
     <head>
 
         <!-- Basic -->
-        <title>Sulfur | Home</title>
+        <title>SRD | Portfolio</title>
 
         <!-- Define Charset -->
         <meta charset="utf-8">
